--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7  
         with:
           webRenderer: html
+          baseHref: /enelx-intercharge-qrcode/
